--- a/index.html
+++ b/index.html
@@ -11,8 +11,17 @@
   </head>
 
   <body>
+ <!-- barra de navegacin -->
+ <div class="navbar">
+    <h1>Yoga Facial</h1>
+   <button id="verCarrito">🛒</button>
+
+</div>
+
+
+
     <div id="shopYog"></div>
-    <button id="verCarrito">Ver Carrito</button>
+  
     <div id="seccionContainer"></div>
     <div id="totalBuy"></div>
 
