--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
    <button id="verCarrito">🛒</button>
 
 </div>
-
+<input id="buscador" placeholder="Buscar Producto">
+<button id="boton">Buscar Producto</button>
 
 
     <div id="shopYog"></div>
@@ -26,6 +27,7 @@
     <div id="totalBuy"></div>
 
     <!-- javascript -->
-    <script defer src=".js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script defer src="js/main.js"></script>
   </body>
 </html>
