--- a/index.html
+++ b/index.html
@@ -1,33 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- css -->
-    <link rel="stylesheet" href="./style.css" />
-    <!-- Titulo-->
-    <title>yoga facial</title>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+ <!-- TOASTIIFY -->
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+  <!-- css -->
+  <link rel="stylesheet" href="./style.css" />
+  <!-- Titulo-->
+  <title>yoga facial</title>
+</head>
 
-  <body>
- <!-- barra de navegacin -->
- <div class="navbar">
+<body>
+  <!-- barra de navegacin -->
+  <div class="navbar">
     <h1>Yoga Facial</h1>
-   <button id="verCarrito">🛒</button>
+  </div>
 
-</div>
-<input id="buscador" placeholder="Buscar Producto">
-<button id="boton">Buscar Producto</button>
+<div>
+    <button id="verCarrito">🛒</button>
+ </div> 
 
-
-    <div id="shopYog"></div>
   
-    <div id="seccionContainer"></div>
-    <div id="totalBuy"></div>
 
-    <!-- javascript -->
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script defer src="js/main.js"></script>
-  </body>
+  <div class="contenedor">
+    <input id="buscador" placeholder="Buscar Producto">
+    <button id="boton">Buscar Producto</button>
+  </div>
+
+
+
+
+  <div id="shopYog"></div>
+ <div id="seccionContainer"></div>
+ 
+
+
+  <!-- javascript -->
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script defer src="js/main.js"></script>
+</body>
+
 </html>
